# python-sdk

./: BUILD.bazel  README.md  setup.py
.github/workflows/: publish.yml
clutchcall/: auth.py  client.py  data.py  games.py  media.py  method_id.py  moqt.py  robotics.py  streams.py  voice.py
examples/: data_consumer.py  data_device.py  games_client.py  games_server.py  openai_realtime_demux.py  robot_telemetry.py  robotics_fleet_sub.py  robotics_ros_bridge.py  streams_publish.py  streams_record.py  test_audio_io.py  test_dial.py  test_http3.py  test_webtransport.py  voice_agent_attach.py
tests/: test_sdk.py
